Updated OAuth client to use XML configuration for sources.
Added support for Common.pm to file PhotoCatalog root and use that for locating configuration files.  It also records the location of the XML configuration file it used for easy editing.

findSources() can now locate a source by name/id irregardless of type.

oauth-client now reads tokens and secrets from loaded configuration and updates the XML file directly.  It also uses the configured sources allowing for multiple sources of the same type.

--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -3,10 +3,10 @@
 		<p><a href="google.pl">Google Latitude</a></p>
 		<p><a href="twitter.pl">Twitter</a></p>
 		-->
-		<p><a href="oauth-client.pl?app=Facebook">Connect with Facebook</a></p>
-		<p><a href="oauth-client.pl?app=Flickr">Connect with Flickr</a></p>
-		<p><a href="oauth-client.pl?app=FourSquare">Connect with FourSquare</a></p>
-		<p><a href="oauth-client.pl?app=Google">Connect with Google Latitude</a></p>
-		<p><a href="oauth-client.pl?app=StatusNet">Connect with StatusNet</a></p>
-		<p><a href="oauth-client.pl?app=Twitter">Connect with Twitter</a></p>
+		<p><a href="oauth-client.pl?source=Facebook">Connect with Facebook</a></p>
+		<p><a href="oauth-client.pl?source=Flickr">Connect with Flickr</a></p>
+		<p><a href="oauth-client.pl?source=FourSquare">Connect with FourSquare</a></p>
+		<p><a href="oauth-client.pl?source=Google">Connect with Google Latitude</a></p>
+		<p><a href="oauth-client.pl?source=StatusNet">Connect with StatusNet</a></p>
+		<p><a href="oauth-client.pl?source=Twitter">Connect with Twitter</a></p>
 </body></html>
